# charls-js

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  TEST.md  decode_file  encode_file  index.html  package-lock.json  package.json  test.cpp  tsconfig.json  tsup.config.ts
release/decode/: index.d.mts  index.js  index.mjs
release/encode/: index.d.ts  index.js  index.mjs
scripts/: README.md  docker-build.sh  docker-sh.sh  wasm-build.sh
src/: CMakeLists.txt  decode.ts  decode_file.cpp  encode.ts  encode_file.cpp  jsdecode.cpp  jsencode.cpp
src/codec/: decode.cpp  decode.h  encode.cpp  encode.h
src/tshelper/: decode.ts  encode.cts  encode.ts
test-files/: 2.jls  decoded.raw  pixel.jls  pixel.raw  pixel2.raw  pixel3.raw  pixel4.raw
test/browser/: index.html
